added author name tag+css (no logic)

--- a/css/main.css
+++ b/css/main.css
@@ -74,10 +74,19 @@
   bottom: 15px;
   left: 15px;
   height: 54px;
-  width: 226px;
+  width: 252px;
   background-image: url(https://cdn.aframe.io/a-painter/images/apainter-banner.png);
 }
 
-#apainter-logo.hidden {
+#apainter-logo.hidden, #apainter-author.hidden{
   display: none;
+}
+
+#apainter-author {
+  position: fixed;
+  bottom: 28px;
+  left: 268px;
+  display: inline-block;
+  font: 18px arial, sans-serif;
+  color: #e42b5a;
 }
